--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -10,6 +10,14 @@
   margin: 0;
   padding: 0;
 }
+.mealsLoading {
+  text-align: center;
+  color: white;
+}
+.mealsError {
+  text-align: center;
+  color: rgb(201, 16, 16);
+}
 
 @keyframes meals-appear {
   from {
