--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -50,7 +50,7 @@
 
 .modal {
   position: fixed;
-  top: 15vh;
+  top: 10vh;
   left: 5%;
   width: 90%;
   background-color: white;
@@ -64,6 +64,7 @@
 @media (min-width: 768px) {
   .modal {
     width: 40rem;
+    /* height: auto; */
     left: calc(50% - 20rem);
   }
 }
